--- a/201806/20180619.md
+++ b/201806/20180619.md
@@ -1,10 +1,9 @@
 # 読んだ
 
 ## ネット
-* [上級プログラマってどんな本読んでるの？中堅プログラマがマウンティング取られないための名著8選](https://valuable.hatenablog.com/entry/masterpieces-8)
-* [マリーやメルルも登場。「ネルケと伝説の錬金術士たち ～新たな大地のアトリエ～」の新情報が公開に](https://www.4gamer.net/games/423/G042360/20180615172/)
-	* Steam版がない・・・！
+[https://note.mu/issei_y/n/n76af7f3d46e4](「私プログラミングの才能がないのでしょうか？」という質問への返答)
+* 俺も無いと思うけどゲームは作りたいからちまちまやってる
 
 ## 読書
 * 達人プログラマー
-	* 進捗 : 11%
+	* 進捗 : 14%
