--- a/201806/20180619.md
+++ b/201806/20180619.md
@@ -3,7 +3,13 @@
 ## ネット
 [https://note.mu/issei_y/n/n76af7f3d46e4](「私プログラミングの才能がないのでしょうか？」という質問への返答)
 * 俺も無いと思うけどゲームは作りたいからちまちまやってる
+[https://game.watch.impress.co.jp/docs/news/1047403.html](「ゼルダの伝説ブレスオブザワイルド」が実現した“かけ算の遊び”)
+[https://techlife.cookpad.com/entry/2018/06/19/110000](無理をしないコードレビュー クックパッドエンジニアブログ)
+[https://qiita.com/iguchi1124/items/a9688010b82b821071b8](GitHubのIssueやPull requestで頻出する英語の略語達)
+[https://togetter.com/li/1238478](『教え方が上手い人は何をしているか？』を具体的にまとめた表がとても参考になると話題に)
 
 ## 読書
 * 達人プログラマー
 	* 進捗 : 14%
+* コーチングの基本
+	* 育成施策担当になったので直近読もうと思って同期にオススメ教えてもらった！
