りんくまちがってた

--- a/201806/20180621.md
+++ b/201806/20180621.md
@@ -1,7 +1,7 @@
 # 読んだ
 
 ## ネット
-[https://mba.globis.ac.jp/about_mba/glossary/detail-11914.html](ハロー効果)
+* [ハロー効果](https://mba.globis.ac.jp/about_mba/glossary/detail-11914.html)
 
 ## 読書
 * 達人プログラマー
