--- a/201806/20180622.md
+++ b/201806/20180622.md
@@ -1,7 +1,7 @@
 # 読んだ
 
 ## ネット
-[https://togetter.com/li/1239625](女性エンジニアが少ないとやる気が出ない問題で批判「懲戒解雇されてほしい、エンジニアやめろ」一方、過敏に反応しすぎの声も)
+* [女性エンジニアが少ないとやる気が出ない問題で批判「懲戒解雇されてほしい、エンジニアやめろ」一方、過敏に反応しすぎの声も](https://togetter.com/li/1239625)
 
 
 ## 読書
