--- a/201806/20180625.md
+++ b/201806/20180625.md
@@ -1,9 +1,9 @@
 # 読んだ
 
 ## ネット
-[https://qiita.com/nanasess/items/350e59b29cceb2f122b3](ログ設計指針 - Qiita)
-[https://logmi.jp/83609](生産性を上げるのにスター社員はいらない)
-[https://www.news-postseven.com/archives/20180620_698785.html](防衛大学校に学ぶ「ストレスフルな環境で成長する」考え方)
+* [ログ設計指針 - Qiita](https://qiita.com/nanasess/items/350e59b29cceb2f122b3)
+* [生産性を上げるのにスター社員はいらない](https://logmi.jp/83609)
+* [防衛大学校に学ぶ「ストレスフルな環境で成長する」考え方](https://www.news-postseven.com/archives/20180620_698785.html)
 
 ## 読書
 * 達人プログラマー
