--- a/201806/20180620.md
+++ b/201806/20180620.md
@@ -1,7 +1,7 @@
 # 読んだ
 
 ## ネット
-[https://seleck.cc/1230](ノンプログラマーが半年で400以上の業務を自動化！メルカリが作る「Karakuri」とは)
+* [ノンプログラマーが半年で400以上の業務を自動化！メルカリが作る「Karakuri」とは](https://seleck.cc/1230)
 
 ## 読書
 * 達人プログラマー
