--- a/201807/20180705.md
+++ b/201807/20180705.md
@@ -6,6 +6,7 @@
 * [マシュマロ・チャレンジのやり方](https://heart-quake.com/article.php?p=435)
 * [増え続ける工数を変わらぬ人数で捌いていくフロムソフトウェアの方法論](http://jp.gamesindustry.biz/article/1804/18040601/)
 	* フロム好き
+* [開発納期は遅らせない！たった15人が1年半で、40本のゲームをリリースできた理由とは](https://seleck.cc/750)
 
 
 ## 読書
