--- a/201904/20190424.md
+++ b/201904/20190424.md
@@ -8,7 +8,9 @@
 	* youtube-playerが元のyoutuber APIのメソッド全部（？）持ってるっぽい記述を見つけたからこっち使うか。
 * expressはelectronでも使うのね
 * riot.jsなるほど簡単で便利だ。 
+	* [Riot.jsの使い方について](https://qiita.com/Masa_Kado/items/2c70b860ce8cb91a0ad0)
 * pugも便利だな。（もともとはjade）
+	* [JavaScriptテンプレートエンジンのPug（Jade）とEJSの比較](https://qiita.com/otsukayuhi/items/8556b014ea363eabe11f)
 
 やべえ！眠くてボイチャしながらなのにコード読めねえ！  
 
